Fix menu z-index

--- a/Junior/Responsive_Project_Tracking_Intro_Component/stylesheets/main.css
+++ b/Junior/Responsive_Project_Tracking_Intro_Component/stylesheets/main.css
@@ -171,6 +171,7 @@ nav {
   align-items: center;
   gap: 1.3rem;
   box-shadow: 0px 0px 11px 2px var(--menu-shadow);
+  z-index: 40;
 }
 .menu-items {
   text-align: center;
